objects/POC_Summary__c.object
<CustomObject>
    <description>These records will be linked to the opportunity to collect information regarding the proof of concept activities for the given opportunity. This will be a child (but not a slave for reporting purposes) of the oppotunity.</description>
    <fields>
        <fullName>Contact_1_Role__c</fullName>
        <label>Contact 1 Role</label>
        <picklist>
            <picklistValues>
                <fullName>Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAR-Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAR-Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_2_Role__c</fullName>
        <label>Contact 2 Role</label>
        <picklist>
            <picklistValues>
                <fullName>Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAR-Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAR-Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_3_Role__c</fullName>
        <label>Contact 3 Role</label>
        <picklist>
            <picklistValues>
                <fullName>Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAR-Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAR-Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check and save this to trigger the outbound email to Tek Talk</inlineHelpText>
        <label>Email Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Sending__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Sending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GMS_Deployed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if there is a GMS in use for this POC</inlineHelpText>
        <label>GMS Deployed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GMS_SW_Version__c</fullName>
        <label>GMS SW Version</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GMS_Site__c</fullName>
        <label>GMS Site</label>
        <picklist>
            <picklistValues>
                <fullName>Site 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site 4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_Tested_Obj1__c</fullName>
        <inlineHelpText>How will test be run</inlineHelpText>
        <label>How Tested</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>How_Tested_Obj2__c</fullName>
        <inlineHelpText>How will the test be run</inlineHelpText>
        <label>How Tested</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>How_Tested_Obj3__c</fullName>
        <inlineHelpText>How will the test be run</inlineHelpText>
        <label>How Tested</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Installed_In_site1__c</fullName>
        <label>Installed In</label>
        <picklist>
            <picklistValues>
                <fullName>Lab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Installed_In_site2__c</fullName>
        <label>Installed In</label>
        <picklist>
            <picklistValues>
                <fullName>Lab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Installed_In_site3__c</fullName>
        <label>Installed In</label>
        <picklist>
            <picklistValues>
                <fullName>Lab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Kwanem_Used__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Did we use a kwanem for the WAN simulation</inlineHelpText>
        <label>Kwanem Used</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Link_1_Name__c</fullName>
        <inlineHelpText>Link Name is free-form but should follow format Site1Name-Site2Name</inlineHelpText>
        <label>Link 1 Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_2_Name__c</fullName>
        <inlineHelpText>Link Name is free-form but should follow format Site1Name-Site2Name</inlineHelpText>
        <label>Link 2 Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_3_Name__c</fullName>
        <inlineHelpText>Link Name is free-form but should follow format Site1Name-Site2Name</inlineHelpText>
        <label>Link 3 Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NX_Count_Site1__c</fullName>
        <label>NX Count</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NX_Count_Site2__c</fullName>
        <label>NX Count</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NX_Count_Site3__c</fullName>
        <label>NX Count</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NX_SW_Version_Site1__c</fullName>
        <label>NX SW Version</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NX_SW_Version_Site2__c</fullName>
        <label>NX SW Version</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NX_SW_Version_Site3__c</fullName>
        <label>NX SW Version</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Objective_1__c</fullName>
        <label>Objective 1</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Objective_2__c</fullName>
        <label>Objective 2</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Objective_3__c</fullName>
        <label>Objective 3</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OppOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Owner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>POCSummaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Competition__c</fullName>
        <formula>text(POC_For__r.primary_competitor__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Competition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POC_Account__c</fullName>
        <description>Opportunity account</description>
        <formula>POC_For__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>POC Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POC_Contact1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>POC Contact1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>POCSummaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>POC_Contact2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>POC Contact2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>POCSummaries1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>POC_Contact3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>POC Contact3</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>POCSummaries2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>POC_Diagram__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>To link to this, go to files tab and upload you POC network diagram and then you can browse and link it here.</inlineHelpText>
        <label>POC Diagram</label>
        <referenceTo>Ensemblestorage__EnsembleFile__c</referenceTo>
        <relationshipName>POCSummaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>POC_Duration__c</fullName>
        <formula>IF( POC_End_Date__c &gt;POC_Start_Date__c,  POC_End_Date__c -  POC_Start_Date__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>POC Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>POC_End_Date__c</fullName>
        <inlineHelpText>Date POC equipment shipped back to SP</inlineHelpText>
        <label>POC End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>POC_For__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>which opportunity this is related to</inlineHelpText>
        <label>POC For:</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>POCSummaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>POC_Start_Date__c</fullName>
        <inlineHelpText>Date POC equipment shipped</inlineHelpText>
        <label>POC Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>POC_Status__c</fullName>
        <formula>Text(POC_For__r.Eval_Stage__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>POC Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POC_Summary__c</fullName>
        <label>POC Summary</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>RSM_Contact__c</fullName>
        <formula>OppOwner__r.FirstName + &quot; &quot; + OppOwner__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RSM Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SE_Contact__c</fullName>
        <formula>POC_For__r.Technical_Responsible__r.FirstName + &quot; &quot; + POC_For__r.Technical_Responsible__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SE Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site1_Appliances__c</fullName>
        <label>Appliances</label>
        <picklist>
            <picklistValues>
                <fullName>NX1700</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NX2600</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NX2610</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NX3600</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NX5600</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NX7600</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NX8600</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NX9610</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VX1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VX2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VX3000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VX5000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NX2700</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NX3700</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NX5700</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NX7700</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NX8700</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NX9700</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VRX-8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VXX</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Site1_Connection_Speed__c</fullName>
        <inlineHelpText>Site1_Connection_Speed</inlineHelpText>
        <label>Connection Speed</label>
        <picklist>
            <picklistValues>
                <fullName>T-1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3Mb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.5Mb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6Mb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10Mb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15Mb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30Mb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS-3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OC-3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OC-12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gigabit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OC-48</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Site1_Connection_Type__c</fullName>
        <label>Connection Type</label>
        <picklist>
            <picklistValues>
                <fullName>Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MPLS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP VPN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satellite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metro Ethernet</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Site1_Deployment_Mode__c</fullName>
        <label>Deployment Mode</label>
        <picklist>
            <picklistValues>
                <fullName>Bridge-2 Port</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bridge-4 Port Std</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bridge-4 Port Flat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bridge-Parallel Inline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bridge-Serial Inline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Router-PBR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Router-PBR VRP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Router-VRRP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Router-WCCP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Router-WCCP LB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DHR-PBR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DHR-WCCP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Site2_Appliances__c</fullName>
        <label>Appliances</label>
        <picklist>
            <picklistValues>
                <fullName>NX1700</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NX2600</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NX2610</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NX3600</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NX5600</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NX7600</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NX8600</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NX9610</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VX1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VX2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VX3000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VX5000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NX2700</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NX3700</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NX5700</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NX7700</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NX8700</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NX9700</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VRX-8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VXX</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Site2_Connection_Speed__c</fullName>
        <label>Connection Speed</label>
        <picklist>
            <picklistValues>
                <fullName>T-1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3Mb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.5Mb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6Mb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10Mb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15Mb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30Mb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS-3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OC-3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OC-12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gigabit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OC-48</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Site2_Connection_Type__c</fullName>
        <label>Connection Type</label>
        <picklist>
            <picklistValues>
                <fullName>Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MPLS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP VPN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satellite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metro Ethernet</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Site2_Deployment_Mode__c</fullName>
        <label>Deployment Mode</label>
        <picklist>
            <picklistValues>
                <fullName>Bridge-2 Port</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bridge-4 Port Std</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bridge-4 Port Flat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bridge-Parallel Inline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bridge-Serial Inline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Router-PBR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Router-PBR VRP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Router-VRRP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Router-WCCP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Router-WCCP LB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DHR-PBR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DHR-WCCP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Site3_Appliances__c</fullName>
        <label>Appliances</label>
        <picklist>
            <picklistValues>
                <fullName>NX1700</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NX2600</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NX2610</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NX3600</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NX5600</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NX7600</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NX8600</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NX9610</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VX1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VX2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VX3000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VX5000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NX2700</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NX3700</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NX5700</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NX7700</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NX8700</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NX9700</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VRX-8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VXX</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Site3_Connection_Speed__c</fullName>
        <label>Connection Speed</label>
        <picklist>
            <picklistValues>
                <fullName>T-1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3Mb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.5Mb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6Mb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10Mb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15Mb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30Mb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS-3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OC-3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OC-12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gigabit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OC-48</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Site3_Connection_Type__c</fullName>
        <label>Connection Type</label>
        <picklist>
            <picklistValues>
                <fullName>Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MPLS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP VPN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satellite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metro Ethernet</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Site3_Deployment_Mode__c</fullName>
        <label>Deployment Mode</label>
        <picklist>
            <picklistValues>
                <fullName>Bridge-2 Port</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bridge-4 Port Std</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bridge-4 Port Flat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bridge-Parallel Inline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bridge-Serial Inline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Router-PBR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Router-PBR VRP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Router-VRRP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Router-WCCP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Router-WCCP LB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DHR-PBR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DHR-WCCP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Site_1_Address__c</fullName>
        <label>Address</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Site_1_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>POCSummaries3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site_1_HW_Vendors__c</fullName>
        <label>HW Vendors</label>
        <picklist>
            <picklistValues>
                <fullName>Brocade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cisco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commvault</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DoubleTake</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EqualLogic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extreme</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foundry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Juniper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NetApp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other HW Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tivoli</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VMWare</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
</CustomObject>